<resources>
    <string name="app_name">software</string>
    <string name="birthdate">생년월일</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="inputid">아이디를 입력하세요.</string>
    <string name="inputpwd">비밀번호를 입력하세요.</string>
    <string name="inputname">이름을 입력하세요.</string>
    <string name="combinatied_look">Combinatied Look</string>
</resources>