<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_dailylook_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="델룩"
                style="@style/DailylookTitleStyle"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/signup_dailylook_title_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/signup_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    style="@style/NormalTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/signup_id_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputid"
                    android:inputType="textPersonName"
                    style="@style/EditTextTextStyle"
                    app:layout_constraintTop_toBottomOf="@id/signup_id_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/signup_pw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwd"
                    style="@style/NormalTextStyle"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_id_et"/>

                <EditText
                    android:id="@+id/signup_pw_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputpwd"
                    android:inputType="textPassword"
                    style="@style/EditTextTextStyle"
                    app:layout_constraintTop_toBottomOf="@id/signup_pw_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/signup_repw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="비밀번호재확인"
                    style="@style/NormalTextStyle"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_pw_et"/>

                <EditText
                    android:id="@+id/signup_repw_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputpwd"
                    android:inputType="textPassword"
                    style="@style/EditTextTextStyle"
                    app:layout_constraintTop_toBottomOf="@id/signup_repw_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/signup_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="@style/NormalTextStyle"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_repw_et"/>

                <EditText
                    android:id="@+id/signup_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputname"
                    android:inputType="textPersonName"
                    style="@style/EditTextTextStyle"
                    app:layout_constraintTop_toBottomOf="@id/signup_name_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/signup_birthdate_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    style="@style/NormalTextStyle"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_name_et"/>

                <LinearLayout
                    android:id="@+id/signup_birthdate_ly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_birthdate_tv">
                    <Spinner
                        android:id="@+id/signup_year_spinner"
                        android:layout_width="110dp"
                        android:layout_height="60dp"
                        android:entries="@array/year_spinner"/>
                    <Spinner
                        android:id="@+id/signup_month_spinner"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:entries="@array/month_spinner"/>
                    <Spinner
                        android:id="@+id/signup_date_spinner"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:entries="@array/date_spinner"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_sex_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/signup_birthdate_ly"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/signup_sex_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="성별"
                        style="@style/NormalTextStyle"
                        />

                    <RadioGroup
                        android:id="@+id/signup_sex_rg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        >
                        <RadioButton
                            android:id="@+id/signup_sex_man_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="남자"
                            style="@style/NormalTextStyle"
                            android:layout_marginEnd="20dp"/>

                        <RadioButton
                            android:id="@+id/signup_sex_woman_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="여자"
                            style="@style/NormalTextStyle"
                            android:layout_marginEnd="20dp"/>

                    </RadioGroup>

                </LinearLayout>
                <Button
                    android:id="@+id/signup_signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="가입하기"
                    style="@style/ButtonStyle"
                    android:background="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/signup_sex_ly"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
