<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindIdActivity">

    <TextView
        android:id="@+id/findid_dailylook_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="델룩"
        style="@style/DailylookTitleStyle"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findid_dailylook_title_tv"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/findid_findid_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="아이디찾기"
            style="@style/NormalTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/findid_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/NormalTextStyle"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/findid_findid_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/findid_name_et"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/inputname"
            style="@style/EditTextTextStyle"
            app:layout_constraintTop_toBottomOf="@id/findid_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/findid_birthdate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            style="@style/NormalTextStyle"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/findid_name_et"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/findid_birthdate_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/findid_birthdate_tv">

            <Spinner
                android:id="@+id/findid_year_spinner"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:entries="@array/year_spinner"/>
            <Spinner
                android:id="@+id/findid_month_spinner"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:entries="@array/month_spinner"
                />
            <Spinner
                android:id="@+id/findid_date_spinner"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:entries="@array/date_spinner"
                />
        </LinearLayout>

        <Button
            android:id="@+id/findid_findid_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID 찾기"
            style="@style/ButtonStyle"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/findid_birthdate_ly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>